<resources>
    <string name="app_name">Titip Jual</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_penjualan">Penjualan</string>
    <string name="menu_penjual">Penjual</string>
    <string name="menu_pesanan">Pesanan</string>
    <string name="menu_logout">Log out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_phone">Phone must be >10 characters</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="label_phone_number">Phone number</string>
    <string name="label_password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="dont_have_an_account_register_here">Dont have an account? Register here</string>
    <string name="jargon">Monitoring penjualan kamu</string>
    <string name="this_month">Bulan ini Rp. %s</string>
    <string name="cari_penjualan">Cari Penjualan</string>
    <string name="cari_pesanan">Cari Pesanan</string>
    <string name="penjualan_hari_ini">Penjualan hari ini</string>
    <string name="rp">Rp. %s</string>
    <string name="harga_normal_rp">Harga Normal\t\t: Rp. %s</string>
    <string name="harga_reseller_rp">Harga Reseller\t: Rp. %s</string>
    <string name="xrp">X Rp. %s</string>
    <string name="label_belum_direkap">Belum direkap</string>
    <string name="label_belum_dibayar">Belum dibayar</string>
    <string name="label_selesai">Selesai</string>
    <string name="jumlah_barang_s">Jumlah barang : %s</string>
    <string name="terjual_s">Terjual: %s</string>
    <string name="total_s">Total : %s</string>
    <string name="menu_produk">Produk</string>
    <string name="rata_rata_penjualan_perhari_s">Rata-rata penjualan perhari : %s</string>
    <string name="rata_rata_penjualan_setiap_s_s">Rata-rata penjualan setiap %s : %s</string>
    <string name="jumlah_s">Jumlah : %s</string>
    <string name="title_activity_tab_main_acticity">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">hello</string>

</resources>