<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/shape_gradient_login"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/iv_user_photo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="centerInside"
        android:contentDescription="@string/nav_header_desc"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        tools:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/nav_header_title" />

    <TextView
        android:id="@+id/tv_user_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/nav_header_subtitle" />
</LinearLayout>